功能：闭环智能工作流持久运行与事件追踪